src/test/ui/rmeta/rmeta_meta_main.stderr
error[E0560]: struct `Foo` has no field named `field2`
  --> $DIR/rmeta_meta_main.rs:13:19
   |
LL |     let _ = Foo { field2: 42 };
   |                   ^^^^^^ help: did you mean `field`? (a similarly named field)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0560`.
